--- a/food-ordering/package.json
+++ b/food-ordering/package.json
@@ -19,6 +19,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-outside-click-handler": "^1.3.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "4.9.3"
   },
   "devDependencies": {
