--- a/food-ordering/package.json
+++ b/food-ordering/package.json
@@ -22,7 +22,8 @@
     "react-outside-click-handler": "^1.3.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
