--- a/food-ordering/package.json
+++ b/food-ordering/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -20,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-outside-click-handler": "^1.3.0",
+    "react-redux": "^8.0.5",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "typescript": "4.9.3",
