--- a/food-ordering/package.json
+++ b/food-ordering/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
     "formik": "^2.2.9",
+    "mongoose": "^6.8.1",
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
